[Feature]Build Scaffold for main page 1. Build 3 tabs for main page based on Scaffold
Signed-off-by: liusiran <lsr@liusirandeMacBook-Air.local>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Chatting</string>
+
+    // NavigationBar
+    <string name="message">Message</string>
+    <string name="contact">Contact</string>
+    <string name="explore">Explore</string>
 </resources>
